--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^3.0.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.2.6",
     "@reduxjs/toolkit": "^2.8.2",
+    "clsx": "^2.1.1",
     "next-themes": "^0.4.6",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
@@ -23,7 +26,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "sass": "^1.91.0",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
